EMERGENCY FIX: Completely disable Service Worker causing cache conflicts
CRITICAL ISSUE: App only works after deleting browser history because Service Worker serves stale cached files that conflict with authentication state.

IMMEDIATE ACTIONS TAKEN:
1. Disabled SW registration in main.tsx
2. Added automatic SW unregistration on app load
3. Added automatic cache clearing on app load
4. Added emergency cleanup script to index.html (runs before React)

WHAT THIS DOES:
- Unregisters all existing service workers on user devices
- Clears all caches automatically
- Prevents new service worker registration
- Runs cleanup on every page load until users update

RESULT:
- No more 'must clear browser history' to use app
- App will work reliably without cache conflicts
- Users' browsers will self-heal on next visit
- Field workers can use app without technical support

This is a critical production fix that must be deployed immediately.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,29 @@
     <meta name="format-detection" content="telephone=no" />
   </head>
   <body>
+    <script>
+      // EMERGENCY FIX: Unregister all service workers and clear caches
+      // This runs immediately on page load before React loads
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.getRegistrations().then(function(registrations) {
+          for (let registration of registrations) {
+            registration.unregister();
+            console.log('[Emergency] Service Worker unregistered');
+          }
+        });
+      }
+      
+      // Clear all caches
+      if ('caches' in window) {
+        caches.keys().then(function(names) {
+          for (let name of names) {
+            caches.delete(name);
+            console.log('[Emergency] Cache deleted:', name);
+          }
+        });
+      }
+    </script>
+    
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
